--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^12.3.0",
     "framer-motion": "^12.23.15",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.1",
     "recharts": "^3.2.1",
     "tailwind-merge": "^3.3.1",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
