--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "framer-motion": "^12.23.15",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
+    "mapbox-gl": "^3.15.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-map-gl": "^7.1.9",
     "react-router-dom": "^7.9.1",
     "recharts": "^3.2.1",
     "tailwind-merge": "^3.3.1",
@@ -37,6 +39,7 @@
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "@types/react-map-gl": "^6.1.7",
     "@types/recharts": "^1.8.29",
     "@vitejs/plugin-react": "^5.0.2",
     "eslint": "^9.35.0",
@@ -46,6 +49,6 @@
     "tw-animate-css": "^1.3.8",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.43.0",
-    "vite": "^7.1.6"
+    "vite": "^7.1.7"
   }
 }
