--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-leaflet": "^5.0.0",
     "react-map-gl": "^7.1.9",
     "react-router-dom": "^7.9.1",
+    "react-scroll": "^1.9.3",
     "recharts": "^3.2.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13"
@@ -40,6 +41,7 @@
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@types/react-map-gl": "^6.1.7",
+    "@types/react-scroll": "^1.8.10",
     "@types/recharts": "^1.8.29",
     "@vitejs/plugin-react": "^5.0.2",
     "eslint": "^9.35.0",
